--- a/Planet Savers 0.0.1/Planet Savers 0.0.1.csproj
+++ b/Planet Savers 0.0.1/Planet Savers 0.0.1.csproj
@@ -78,6 +78,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scritps\Gizmos\Plataformas\LineConectionPlataforms.cs" />
+    <Compile Include="Assets\Scritps\Plataformas\PlatMovAnyPos.cs" />
     <Compile Include="Assets\Scritps\Player\HeadTankController.cs" />
     <Compile Include="Assets\Scritps\Player\HumanController.cs" />
     <Compile Include="Assets\Scritps\Player\TankController.cs" />
